# web_ui

./: Cargo.toml  LICENSE  README.md
examples/: event_binding.rs  hello.rs  welcome.rs
src/: lib.rs
static/: index.html  webui.js
static/event_binding/: app.js  index.html  style.css  webui.js
static/hello/: app.js  index.html
template/: README.md  template.rs
template/static/: app.js  index.html  style.css
