[package]
name = "web_ui"
version = "0.1.0"
edition = "2024"
description = "A simple Rust library for creating web interfaces"
license = ""

[[example]]
name = "welcome"
path = "examples/welcome.rs"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1.46", features = ["full"] }