[package]
name = "web_ui"
version = "0.1.0"
edition = "2024"
description = "A simple Rust library for creating web interfaces"
license = ""

[[example]]
name = "welcome"
path = "examples/welcome.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "event_binding"
path = "examples/event_binding.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"