[package]
name = "web_ui"
version = "0.1.0"
edition = "2021"
authors = ["williammmm <me@williammmm.dev>"]
description = "A simple Rust library for creating local web interfaces with real-time communication"
documentation = "https://docs.rs/web_ui"
homepage = "https://github.com/williamwith4ms/web_ui"
repository = "https://github.com/williamwith4ms/web_ui"
license = "MIT"
keywords = ["web", "ui", "local", "websocket", "gui"]
categories = ["web-programming", "gui"]
exclude = [
    "target/*",
    ".git/*",
    ".gitignore",
]

[[example]]
name = "welcome"
path = "examples/welcome.rs"

[[example]]
name = "template"
path = "template/template.rs"

[[example]]
name = "event_binding"
path = "examples/event_binding.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"